[package]
name = "pika-wasm"
version = "0.1.1"
authors = ["hyunjun529 <hyunjun529@gmail.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/hyunjun529/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
