[package]
name = "simple_box"
version = "0.1.0"
authors = ["hyunjun529 <hyunjun529@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel32-sys = { version = "0.2.1" }
user32-sys = { version = "0.2.0" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.2.8" }
